♻️ Refine scrna guide

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -53,20 +53,6 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-scrna --modules bionty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
@@ -344,6 +330,22 @@
    "outputs": [],
    "source": [
     "collection.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finish the run and save the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   }
  ],
