--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"agayZTonayqA0000\")"
+    "ln.track(\"agayZTonayqA\")"
    ]
   },
   {
@@ -192,135 +192,6 @@
    "outputs": [],
    "source": [
     "artifact2.view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compare features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we compute shared genes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact1_genes = artifact1.features[\"var\"]\n",
-    "artifact2_genes = artifact2.features[\"var\"]\n",
-    "\n",
-    "shared_genes = artifact1_genes & artifact2_genes\n",
-    "len(shared_genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "shared_genes.list(\"symbol\")[:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compare cell types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact1_celltypes = artifact1.cell_types.all()\n",
-    "artifact2_celltypes = artifact2.cell_types.all()\n",
-    "\n",
-    "shared_celltypes = artifact1_celltypes & artifact2_celltypes\n",
-    "shared_celltypes_names = shared_celltypes.list(\"name\")\n",
-    "shared_celltypes_names"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load the individual artifacts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We could either load the artifacts into memory or access them in `backed` mode through `.open()` to lazily load their content.\n",
-    "\n",
-    "Let's load them into memory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata1 = artifact1.load()\n",
-    "adata2 = artifact2.load()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now subset the two collections by shared cell types:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata1_subset = adata1[adata1.obs[\"cell_type\"].isin(shared_celltypes_names)]\n",
-    "adata2_subset = adata2[adata2.obs[\"cell_type\"].isin(shared_celltypes_names)]"
    ]
   }
  ],
