--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"mfWKm8OtAzp80000\")"
+    "ln.track(\"mfWKm8OtAzp8\")"
    ]
   },
   {
@@ -231,8 +231,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
-    "artifact.save()\n",
+    "artifact = ln.Artifact(\n",
+    "    \"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\"\n",
+    ").save()\n",
     "artifact.view_lineage()"
    ]
   },
