♻️ Add back the instance creation

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -53,6 +53,20 @@
    },
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "!lamin init --storage ./test-scrna --modules bionty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
