--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -126,7 +126,7 @@
     "schema = ln.Schema(\n",
     "    name=\"Flexible AnnData\",\n",
     "    otype=\"AnnData\",\n",
-    "    components={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
+    "    slots={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
     ").save()"
    ]
   },
