--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we could import genes from an old Ensembl version into the `Gene` registry: {doc}`bio-registries.ipynb#access-any-ensembl-genes`."
+    "Alternatively, we could import genes from an old Ensembl version into the `Gene` registry (see [guide](https://docs.lamin.ai/bio-registries#access-any-ensembl-genes))."
    ]
   },
   {
