♻️ Refactor `scrna` use case to leverage `schema`-based curator and prepare lamindb release 1.5.0 (#191)

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh87CpJ/QtqH9DLlh3aEUnYu4oe7)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh8)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track()"
+    "ln.track(\"Nv48yAceNSh8\")"
    ]
   },
   {
@@ -105,6 +105,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before validating & annotating this artifact, we need to define valid features and a schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define valid features\n",
+    "ln.Feature(name=\"donor\", dtype=str).save()\n",
+    "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
+    "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()\n",
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
+    "\n",
+    "# define anndata schema\n",
+    "obs_schema = ln.Schema(itype=ln.Feature).save()\n",
+    "varT_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id).save()\n",
+    "schema = ln.Schema(\n",
+    "    name=\"Flexible AnnData\",\n",
+    "    otype=\"AnnData\",\n",
+    "    slots={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's curate this artifact:"
    ]
   },
@@ -118,17 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\n",
-    "        adata.obs.donor.name: ln.ULabel.name,\n",
-    "        adata.obs.tissue.name: bt.Tissue.name,\n",
-    "        adata.obs.cell_type.name: bt.CellType.name,\n",
-    "        adata.obs.assay.name: bt.ExperimentalFactor.name,\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ")"
+    "curator = ln.curators.AnnDataCurator(adata, schema)"
    ]
   },
   {
@@ -141,48 +160,61 @@
    },
    "outputs": [],
    "source": [
-    "# this runs a while, because this instance is still empty\n",
-    "curator.validate()"
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One cell type isn't validated because it's not part of the `CellType` registry. Let's create it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.add_new_from_var_index()"
+    "bt.CellType(name=\"animal cell\").save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.add_new_from(\"donor\")\n",
-    "curator.add_new_from(\"cell_type\")"
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some Ensembl gene IDs are not validated, likely because they stem from an older version of Ensembl. We create records in the registry through the following convenience method."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.validate()"
+    "curator.slots[\"var.T\"].cat.add_new_from(\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we could import genes from an old Ensembl version into the `Gene` registry (see [guide](inv:docs#bio-registries))."
    ]
   },
   {
@@ -255,7 +287,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection(artifact, key=\"My versioned scRNA-seq collection\").save()"
+    "collection = ln.Collection(artifact, key=\"scrna/collection1\").save()"
    ]
   },
   {
@@ -312,6 +344,22 @@
    "outputs": [],
    "source": [
     "collection.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finish the run and save the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   }
  ],
