--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"ManDYgmftZ8C0003\")"
+    "ln.track(\"ManDYgmftZ8C\")"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(key=\"My versioned scRNA-seq collection\")"
+    "collection_v1 = ln.Collection.get(key=\"scrna/collection1\")"
    ]
   },
   {
