💄 Polish scrna guide

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -121,8 +121,12 @@
     "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
     "\n",
     "# define a schema (or get via ln.examples.anndata.anndata_ensembl_gene_ids_and_valid_features_in_obs())\n",
-    "obs_schema = ln.Schema(itype=ln.Feature).save()\n",
-    "varT_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id).save()\n",
+    "obs_schema = ln.Schema(\n",
+    "    itype=ln.Feature\n",
+    ").save()  # validate obs columns against the Feature registry\n",
+    "varT_schema = ln.Schema(\n",
+    "    itype=bt.Gene.ensembl_gene_id\n",
+    ").save()  # validate var.T columns against the Gene registry\n",
     "schema = ln.Schema(\n",
     "    name=\"anndata_ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    otype=\"AnnData\",\n",
@@ -173,16 +177,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now validation passes with a warning."
+    "We can now save the dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_anndata(adata, schema=schema).save()"
+    "# runs ~10sec because it imports 40k Ensembl gene IDs from a public ontology\n",
+    "artifact = ln.Artifact.from_anndata(\n",
+    "    adata, key=\"datasets/conde22.h5ad\", schema=schema\n",
+    ").save()"
    ]
   },
   {
