--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -200,14 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some Ensembl gene IDs don't validate because they stem from an older version of Ensembl. If we wanted to be 100% sure that all identifiers are valid ideas we could import the genes from an old Ensembl version into the `Gene` registry (see [guide](inv:docs#bio-registries)). We could enforce it in the `.var.T` schema by setting `maximal_set=True`, which will prohibit any non-valid features in the dataframe."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is annotated with rich metadata:"
+    "Some Ensembl gene IDs don't validate because they stem from an older version of Ensembl. If we wanted to be 100% sure that all gene identifiers are valid Ensembl IDs you can import the genes from an old Ensembl version into the `Gene` registry (see [guide](inv:docs#bio-registries)). One can also enforce this through the `.var.T` schema by setting `schema.maximal_set=True`, which will prohibit any non-valid features in the dataframe."
    ]
   },
   {
