--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before validating & annotating this artifact, we need to define valid features and a schema."
+    "To validate & annotate a dataset, we need to define valid features and a schema."
    ]
   },
   {
@@ -120,11 +120,15 @@
     "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()\n",
     "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
     "\n",
-    "# define anndata schema\n",
-    "obs_schema = ln.Schema(itype=ln.Feature).save()\n",
-    "varT_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id).save()\n",
+    "# define a schema (or get via ln.examples.anndata.anndata_ensembl_gene_ids_and_valid_features_in_obs())\n",
+    "obs_schema = ln.Schema(\n",
+    "    itype=ln.Feature\n",
+    ").save()  # validate obs columns against the Feature registry\n",
+    "varT_schema = ln.Schema(\n",
+    "    itype=bt.Gene.ensembl_gene_id\n",
+    ").save()  # validate var.T columns against the Gene registry\n",
     "schema = ln.Schema(\n",
-    "    name=\"Flexible AnnData\",\n",
+    "    name=\"anndata_ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    otype=\"AnnData\",\n",
     "    slots={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
     ").save()"
@@ -134,20 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's curate this artifact:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curator = ln.curators.AnnDataCurator(adata, schema)"
+    "Let's attempt saving this dataset as a validated & annotated artifact."
    ]
   },
   {
@@ -161,9 +152,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    curator.validate()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
+    "    artifact = ln.Artifact.from_anndata(adata, schema=schema).save()\n",
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -183,45 +174,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    curator.validate()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some Ensembl gene IDs are not validated, likely because they stem from an older version of Ensembl. We create records in the registry through the following convenience method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curator.slots[\"var.T\"].cat.add_new_from(\"columns\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Alternatively, we could import genes from an old Ensembl version into the `Gene` registry (see [guide](inv:docs#bio-registries))."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically curate it with validated features and labels:"
+    "We can now save the dataset."
    ]
   },
   {
@@ -234,14 +190,17 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curator.save_artifact(key=\"datasets/conde22.h5ad\")"
+    "# runs ~10sec because it imports 40k Ensembl gene IDs from a public ontology\n",
+    "artifact = ln.Artifact.from_anndata(\n",
+    "    adata, key=\"datasets/conde22.h5ad\", schema=schema\n",
+    ").save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is annotated with rich metadata:"
+    "Some Ensembl gene IDs don't validate because they stem from an older version of Ensembl. If we wanted to be 100% sure that all gene identifiers are valid Ensembl IDs you can import the genes from an old Ensembl version into the `Gene` registry (see [guide](inv:docs#bio-registries)). One can also enforce this through the `.var.T` schema by setting `schema.maximal_set=True`, which will prohibit any non-valid features in the dataframe."
    ]
   },
   {
