--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -167,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bt.CellType(name=\"animal cell\").save()"
