--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -353,7 +353,7 @@
     "    ms_rna = soma_store[\"ms\"][\"RNA\"]\n",
     "    n_obs = len(soma_store[\"obs\"])\n",
     "    n_var = len(ms_rna[\"var\"])\n",
-    "    X = ms_rna[\"X\"][\"data\"].read().coos((n_obs, n_var)).concat().to_scipy()\n",
+    "    X = ms_rna[\"X\"][\"data\"].read().coos((n_obs, n_var)).concat().to_scipy().tocsr()\n",
     "\n",
     "# calculate PCA embedding from the queried `X`\n",
     "pca_array = sc.pp.pca(X, n_comps=2)"
