--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = public.to_dataframe()\n",
     "df.head()"
    ]
   },
@@ -457,7 +457,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.Source.filter(entity=\"bionty.Gene\").df()"
+    "bt.Source.filter(entity=\"bionty.Gene\").to_dataframe()"
    ]
   },
   {
@@ -467,7 +467,7 @@
    "outputs": [],
    "source": [
     "# only lists the sources that are currently used\n",
-    "bt.Source.filter(entity=\"bionty.Gene\", currently_used=True).df()"
+    "bt.Source.filter(entity=\"bionty.Gene\", currently_used=True).to_dataframe()"
    ]
   },
   {
@@ -505,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.Source.filter(currently_used=True).df()"
+    "bt.Source.filter(currently_used=True).to_dataframe()"
    ]
   }
  ],
