--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -410,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "soma_artifact.versions.df()"
+    "soma_artifact.versions.to_dataframe()"
    ]
   },
   {
