--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(transform=transform).df()"
+    "ln.Artifact.filter(transform=transform).to_dataframe()"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "query = ln.Artifact.filter(\n",
     "    tissues=tissues.blood,\n",
     ")\n",
-    "query.df()"
+    "query.to_dataframe()"
    ]
   },
   {
