--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "collection.artifacts.df()"
+    "collection.artifacts.to_dataframe()"
    ]
   },
   {
