--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Collection.df()"
+    "ln.Collection.to_dataframe()"
    ]
   },
   {
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "collection.artifacts.df()"
+    "collection.artifacts.to_dataframe()"
    ]
   },
   {
