♻️ Migrate scrna2 to schema-based curator

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "# pip install lamindb\n",
     "!lamin init --storage ./test-scrna --modules bionty"
    ]
   },
@@ -70,7 +70,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"Nv48yAceNSh8\")"
+    "ln.track()"
    ]
   },
   {
@@ -153,8 +153,8 @@
    "source": [
     "try:\n",
     "    artifact = ln.Artifact.from_anndata(adata, schema=schema).save()\n",
-    "except ln.errors.ValidationError as error:\n",
-    "    print(error)"
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
