--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"ManDYgmftZ8C\")"
+    "ln.track()"
    ]
   },
   {
@@ -59,8 +59,11 @@
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
-    "# we don't trust the cell type annotation in this dataset\n",
+    "# we don't trust the cell type annotation in this dataset, but still want to map into into our registry\n",
     "adata.obs.rename(columns={\"cell_type\": \"cell_type_untrusted\"}, inplace=True)\n",
+    "# define the corresponding feature\n",
+    "ln.Feature(name=\"cell_type_untrusted\", dtype=bt.CellType).save()\n",
+    "# this is our dataset\n",
     "adata"
    ]
   },
@@ -68,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a curator:"
+    "We can't save it in validated form."
    ]
   },
   {
@@ -81,13 +84,14 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.symbol,\n",
-    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
-    "    organism=\"human\",\n",
-    ")\n",
-    "curator.validate()"
+    "try:\n",
+    "    ln.Artifact.from_anndata(\n",
+    "        adata,\n",
+    "        key=\"scrna/dataset2.h5ad\",\n",
+    "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    "    ).save()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -160,25 +164,14 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata_validated,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
-    "    organism=\"human\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curator.validate()"
+    "try:\n",
+    "    ln.Artifact.from_anndata(\n",
+    "        adata_validated,\n",
+    "        key=\"scrna/dataset2.h5ad\",\n",
+    "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    "    ).save()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -206,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "curator.non_validated[\"cell_type_untrusted\"]"
+    "adata.obs[\"cell_type_untrusted\"].unique()"
    ]
   },
   {
@@ -275,27 +268,11 @@
    },
    "outputs": [],
    "source": [
-    "curator.validate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact = curator.save_artifact(description=\"10x reference adata\")"
+    "artifact = ln.Artifact.from_anndata(\n",
+    "    adata_validated,\n",
+    "    key=\"scrna/dataset2.h5ad\",\n",
+    "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    ").save()"
    ]
   },
   {
@@ -365,18 +342,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact_trusted = ln.Curator.from_anndata(\n",
+    "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact_trusted = ln.Artifact.from_anndata(\n",
     "    adata_validated,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\n",
-    "        \"cell_type\": bt.CellType.name,\n",
-    "        \"cell_type_untrusted\": bt.CellType.name,\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ").save_artifact(\n",
+    "    key=\"scrna/dataset2.h5ad\",\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
-    "    revises=artifact,\n",
-    ")"
+    "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    ").save()"
    ]
   },
   {
@@ -439,27 +419,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want, you can label the collection's version by setting `.version`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.version = \"2\"\n",
-    "collection_v2.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Version 2 of the collection covers significantly more conditions."
    ]
   },
@@ -499,7 +458,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
