--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"mfWKm8OtAzp8\")"
+    "ln.track()"
    ]
   },
   {
@@ -51,20 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Collection.to_dataframe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection = ln.Collection.get(key=\"scrna/collection1\", version=\"2\")"
+    "collection = ln.Collection.get(key=\"scrna/collection1\")"
    ]
   },
   {
