--- a/docs/scrna-mappedcollection.ipynb
+++ b/docs/scrna-mappedcollection.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "import lamindb as ln\n",
     "\n",
-    "ln.track(\"Qr1kIHvK506r0002\")"
+    "ln.track()"
    ]
   },
   {
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(key=\"scrna/collection1\", version=\"2\")\n",
+    "collection = ln.Collection.get(key=\"scrna/collection1\")\n",
     "collection.describe()"
    ]
   },
