--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -41,7 +41,7 @@
     "import tiledbsoma.io\n",
     "from functools import reduce\n",
     "\n",
-    "ln.track(\"oJN8WmVrxI8m0000\")"
+    "ln.track()"
    ]
   },
   {
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(key=\"scrna/collection1\", version=\"2\")\n",
+    "collection = ln.Collection.get(key=\"scrna/collection1\")\n",
     "collection.describe()"
    ]
   },
