--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -90,8 +90,8 @@
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -170,8 +170,8 @@
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -285,15 +285,6 @@
    },
    "outputs": [],
    "source": [
-    "artifact.view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "artifact.describe()"
    ]
   },
@@ -339,7 +330,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()"
@@ -348,7 +343,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact_trusted = ln.Artifact.from_anndata(\n",
