--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To validate & annotate a dataset, we need to define valid features and a schema."
+    "To validate & annotate a dataset, we need to define valid features."
    ]
   },
   {
@@ -114,24 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define valid features\n",
     "ln.Feature(name=\"donor\", dtype=str).save()\n",
     "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
     "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()\n",
-    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
-    "\n",
-    "# define a schema (or get via ln.examples.anndata.anndata_ensembl_gene_ids_and_valid_features_in_obs())\n",
-    "obs_schema = ln.Schema(\n",
-    "    itype=ln.Feature\n",
-    ").save()  # validate obs columns against the Feature registry\n",
-    "varT_schema = ln.Schema(\n",
-    "    itype=bt.Gene.ensembl_gene_id\n",
-    ").save()  # validate var.T columns against the Gene registry\n",
-    "schema = ln.Schema(\n",
-    "    name=\"anndata_ensembl_gene_ids_and_valid_features_in_obs\",\n",
-    "    otype=\"AnnData\",\n",
-    "    slots={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
-    ").save()"
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()"
    ]
   },
   {
@@ -152,7 +138,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    artifact = ln.Artifact.from_anndata(adata, schema=schema).save()\n",
+    "    artifact = ln.Artifact.from_anndata(\n",
+    "        adata, schema=\"ensembl_gene_ids_and_valid_features_in_obs\"\n",
+    "    ).save()\n",
     "except ln.errors.ValidationError:\n",
     "    pass"
    ]
@@ -196,7 +184,9 @@
    "source": [
     "# runs ~10sec because it imports 40k Ensembl gene IDs from a public ontology\n",
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, key=\"datasets/conde22.h5ad\", schema=schema\n",
+    "    adata,\n",
+    "    key=\"datasets/conde22.h5ad\",\n",
+    "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     ").save()"
    ]
   },
