--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -90,8 +90,8 @@
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError as error:\n",
-    "    print(error)"
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -126,32 +126,7 @@
     ")\n",
     "# use ensembl_gene_id as the index\n",
     "adata.var.index.name = \"symbol\"\n",
-    "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")\n",
-    "\n",
-    "# we only want to save data with validated genes\n",
-    "validated = bt.Gene.validate(adata.var.index, bt.Gene.ensembl_gene_id, mute=True)\n",
-    "adata_validated = adata[:, validated].copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we'll use `.raw`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata_validated.raw = adata.raw[:, validated].to_adata()\n",
-    "adata_validated.raw.var.index = adata_validated.var.index"
+    "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")"
    ]
   },
   {
@@ -166,12 +141,12 @@
    "source": [
     "try:\n",
     "    ln.Artifact.from_anndata(\n",
-    "        adata_validated,\n",
+    "        adata,\n",
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError as error:\n",
-    "    print(error)"
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -243,12 +218,12 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\n",
+    "adata.obs[\"cell_type_untrusted_original\"] = adata.obs[\n",
     "    \"cell_type_untrusted\"\n",
     "]  # copy the original annotations\n",
-    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\n",
-    "    \"cell_type_untrusted_original\"\n",
-    "].map(name_mapping)"
+    "adata.obs[\"cell_type_untrusted\"] = adata.obs[\"cell_type_untrusted_original\"].map(\n",
+    "    name_mapping\n",
+    ")"
    ]
   },
   {
@@ -269,7 +244,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
-    "    adata_validated,\n",
+    "    adata,\n",
     "    key=\"scrna/dataset2.h5ad\",\n",
     "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     ").save()"
@@ -321,10 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\n",
-    "    \"cell_type_untrusted_original\"\n",
-    "].map(name_mapping)\n",
-    "adata_validated.obs[\"cell_type\"].unique()"
+    "adata.obs[\"cell_type\"] = adata.obs[\"cell_type_untrusted_original\"].map(name_mapping)\n",
+    "adata.obs[\"cell_type\"].unique()"
    ]
   },
   {
@@ -351,7 +324,7 @@
    "outputs": [],
    "source": [
     "artifact_trusted = ln.Artifact.from_anndata(\n",
-    "    adata_validated,\n",
+    "    adata,\n",
     "    key=\"scrna/dataset2.h5ad\",\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
     "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
