--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Standardize & validate genes"
    ]
   },
   {
@@ -130,30 +130,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    ln.Artifact.from_anndata(\n",
-    "        adata,\n",
-    "        key=\"scrna/dataset2.h5ad\",\n",
-    "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
-    "    ).save()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Standardize & validate cell types"
    ]
   },
   {
@@ -218,9 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "adata.obs[\"cell_type_untrusted_original\"] = adata.obs[\n",
-    "    \"cell_type_untrusted\"\n",
-    "]  # copy the original annotations\n",
+    "adata.obs[\"cell_type_untrusted_original\"] = adata.obs[\"cell_type_untrusted\"]\n",
     "adata.obs[\"cell_type_untrusted\"] = adata.obs[\"cell_type_untrusted_original\"].map(\n",
     "    name_mapping\n",
     ")"
